the best project ef

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
                     <img src="image/megamenu.png" alt="">
                 </div>
                 <ul class="links">
-                <li><a href="#"><i class="fa-solid fa-comments"></i> testimonials</a></li>
-                <li><a href="#"><i class="fa-solid fa-user"></i> team members</a></li>
-                <li><a href="#"><i class="fa-solid fa-building"></i> services</a></li>
-                <li><a href="#"><i class="fa-solid fa-circle-check"></i> our skills</a></li>
-                <li><a href="#"><i class="fa-solid fa-clipboard"></i> how it work</a></li>
+                <li><a href="#testimonials"><i class="fa-solid fa-comments"></i> testimonials</a></li>
+                <li><a href="#team"><i class="fa-solid fa-user"></i> team members</a></li>
+                <li><a href="#services"><i class="fa-solid fa-building"></i> services</a></li>
+                <li><a href="#skills"><i class="fa-solid fa-circle-check"></i> our skills</a></li>
+                <li><a href="#works"><i class="fa-solid fa-clipboard"></i> how it work</a></li>
                 </ul>
                 <ul class="links">
-                <li><a href="#"><i class="fa-solid fa-calendar"></i>events</a></li>
-                <li><a href="#"><i class="fa-solid fa-server"></i>pricing plans</a></li>
-                <li><a href="#"><i class="fa-solid fa-circle-play"></i> top videos</a></li>
-                <li><a href="#"><i class="fa-solid fa-chart-bar"></i> stats</a></li>
-                <li><a href="#"><i class="fa-solid fa-percent"></i> request a discount</a></li>
+                <li><a href="#events"><i class="fa-solid fa-calendar"></i>events</a></li>
+                <li><a href="#pricing"><i class="fa-solid fa-server"></i>pricing plans</a></li>
+                <li><a href="#videos"><i class="fa-solid fa-circle-play"></i> top videos</a></li>
+                <li><a href="#awesome"><i class="fa-solid fa-chart-bar"></i> stats</a></li>
+                <li><a href="#discount"><i class="fa-solid fa-percent"></i> request a discount</a></li>
                 </ul>
              </div>
              <!-- end megamenu -->
@@ -68,7 +68,7 @@
       </div>
      <!-- end landing -->
       <!-- start articles -->
-       <div class="articles" id="articles">
+       <div class="articles" id="article">
         <div class="container">
          <h2 class="main-title">Articles</h2>
          <div class="all-art">
@@ -180,6 +180,7 @@
           </div>  
          </div>
         </div>
+        <div class="spikes"></div>
       <!-- end articles -->
        <!-- start gallery -->
         <div class="gallery" id="gallery">
@@ -372,7 +373,7 @@
 
          <!-- end testimonials  -->
           <!-- start team members -->
-           <div class="team-members" id="team-members">
+           <div class="team-members" id="team">
             <div class="container">
                 <h2 class="main-title">team members</h2>
                 <div class="all-team">
@@ -483,6 +484,7 @@
                 </div>
             </div>
            </div>
+           <div class="spikes"></div>
           <!-- end team members -->
            <!-- start services -->
             <div class="services" id="services">
@@ -524,7 +526,7 @@
             </div>
            <!-- end services -->
             <!-- start our skills -->
-             <div class="our-skills" id="our-skills">
+             <div class="our-skills" id="skills">
                 <div class="container">
                     <h2 class="main-title">our skills</h2>
                     <div class="all-our">
@@ -671,7 +673,7 @@
                    </div>
                    <!-- end start pricing plans -->
                     <!-- start top videos -->
-                     <div class="videos">
+                     <div class="videos" id="videos">
                         <div class="container">
                             <h2 class="main-title">top videos</h2>
                             <div class="all-videos">
@@ -699,7 +701,7 @@
                      </div>
                     <!-- end top videos -->
                      <!-- start awesome -->
-                     <div class="awesome">
+                     <div class="awesome" id="awesome">
                         <div class="container">
                             <h2>our awesome stats</h2>
                             <div class="all-awesome">
